--- a/src/app/sidebarmenuentries/sidebarmenuentries.component.html
+++ b/src/app/sidebarmenuentries/sidebarmenuentries.component.html
@@ -1,8 +1,9 @@
 <ul class="ps-0">
-    <li>
+    <li routerLink="user">
         <mat-icon>person</mat-icon>
-        <span>Users</span></li>
-    <li>
+        <span>User</span>
+    </li>
+    <li routerLink="dashboard">
         <mat-icon>space_dashboard</mat-icon>
         <span>Dashboard</span>
     </li>
