--- a/src/app/titlebar/titlebar.component.html
+++ b/src/app/titlebar/titlebar.component.html
@@ -6,13 +6,18 @@
 
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <div class="me-3 menu-button-container">
-        <mat-icon class="menu-button" (click)="drawer.toggle()">menu</mat-icon>
-      </div>
+        <button class="me-2" (click)="drawer.toggle()" mat-mini-fab color="primary">
+          <mat-icon>menu</mat-icon>
+        </button>
       <span>My App</span>
     </mat-toolbar-row>
   </mat-toolbar>
   <div class="ms-4 mt-4">
     <router-outlet></router-outlet>
+  </div>
+  <div class="add-user-button-container">
+    <button mat-fab color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
   </div>
 </mat-drawer-container>
