--- a/src/app/titlebar/titlebar.component.scss
+++ b/src/app/titlebar/titlebar.component.scss
@@ -1,22 +1,3 @@
-.menu-button-container {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    width: 40px;
-    border: 1px solid transparent;
-    border-radius: 100%;
-    transition: background-color 125ms ease-in;
-
-    &:hover {
-        cursor: pointer;
-        background-color: rgba(255,255,255,0.2);
-        transition: background-color 125ms ease-in;
-    }
-
-}
-
 .sidenav {
     width: 300px;
 }
@@ -28,4 +9,10 @@
     align-items: center;
     height: 64px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.25)
+}
+
+.add-user-button-container {
+    position: absolute;
+    bottom: 48px;
+    right: 48px;
 }
