added input fields to add-user-dialog

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,5 @@
-<p>user works!</p>
+<div class="add-user-button-container">
+    <button (click)="openDialog()" mat-fab color="primary">
+        <mat-icon>add</mat-icon>
+    </button>
+</div>
