--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
-<app-titlebar></app-titlebar>
+<mat-drawer-container class="vh-100" autosize>
+    <mat-drawer #drawer [opened]="true" class="px-16 sidenav" mode="side">
+      <div class="ps-3 logo-container">Platz für ein Logo</div>
+      <div class="mt-3 menu-entries-container"></div><app-sidebar-menu-entries></app-sidebar-menu-entries>
+    </mat-drawer>
+  
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+          <button class="me-2" (click)="drawer.toggle()" mat-mini-fab color="primary">
+            <mat-icon>menu</mat-icon>
+          </button>
+        <span>My App</span>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    <div class="ms-4 mt-4">
+      <router-outlet></router-outlet>
+    </div>
+
+  </mat-drawer-container>
