--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,1 +1,47 @@
-<p>dialog-add-user works!</p>
+<h1 mat-dialog-title>Add user</h1>
+<div mat-dialog-content>
+
+  <form class="example-form">
+    <div class="name-input-fields input-row">
+      <mat-form-field>
+        <mat-label>First Name</mat-label>
+        <input matInput>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Last Name</mat-label>
+        <input matInput>
+      </mat-form-field>
+    </div>
+    <div class="birth-date-input-field">
+      <mat-form-field appearance="fill">
+        <mat-label>Birth Date</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+    <br><br>
+    <div class="address-input-fields">
+      <mat-form-field>
+        <mat-label>Street</mat-label>
+        <input matInput>
+      </mat-form-field>
+      <div class="input-row">
+        <mat-form-field>
+          <mat-label>Zip Code</mat-label>
+          <input matInput>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>City</mat-label>
+          <input matInput>
+        </mat-form-field>
+      </div>
+    </div>
+
+  </form>
+</div>
+<div mat-dialog-actions>
+  <button mat-button>Cancel</button>
+  <button mat-button cdkFocusInitial>Save</button>
+</div>
