--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -5,17 +5,17 @@
     <div class="name-input-fields input-row">
       <mat-form-field>
         <mat-label>First Name</mat-label>
-        <input matInput>
+        <input [(ngModel)]="user.firstName" name="first" matInput>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Last Name</mat-label>
-        <input matInput>
+        <input [(ngModel)]="user.lastName" name="last"  matInput>
       </mat-form-field>
     </div>
     <div class="birth-date-input-field">
       <mat-form-field appearance="fill">
         <mat-label>Birth Date</mat-label>
-        <input matInput [matDatepicker]="picker">
+        <input [(ngModel)]="birthDate" name="birthDate" matInput [matDatepicker]="picker">
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
@@ -25,16 +25,16 @@
     <div class="address-input-fields">
       <mat-form-field>
         <mat-label>Street</mat-label>
-        <input matInput>
+        <input [(ngModel)]="user.street" name="street" matInput>
       </mat-form-field>
       <div class="input-row">
         <mat-form-field>
           <mat-label>Zip Code</mat-label>
-          <input matInput>
+          <input [(ngModel)]="user.zipCode" name="zipCode" matInput>
         </mat-form-field>
         <mat-form-field>
           <mat-label>City</mat-label>
-          <input matInput>
+          <input [(ngModel)]="user.city" name="city" matInput>
         </mat-form-field>
       </div>
     </div>
@@ -43,5 +43,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button>Cancel</button>
-  <button mat-button cdkFocusInitial>Save</button>
+  <button (click)="saveUser()" mat-button cdkFocusInitial>Save</button>
 </div>
