--- a/src/app/dialog-add-user/dialog-add-user.component.scss
+++ b/src/app/dialog-add-user/dialog-add-user.component.scss
@@ -2,6 +2,14 @@
     width: 100% !important;
 }
 
+mat-progress-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+
 .input-row {
    display: flex; 
     gap: 24px;
