updated data binding for firebase user collection and user.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         <span>My App</span>
       </mat-toolbar-row>
     </mat-toolbar>
-    <div class="ms-4 mt-4">
+    <div class="mx-4 mt-4">
       <router-outlet></router-outlet>
     </div>
 
