--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,6 +1,14 @@
-
 .add-user-button-container {
     position: absolute;
     bottom: 48px;
     right: 48px;
+}
+
+.user-table-row {
+
+    td {
+        padding-top: 24px;
+
+
+    }
 }
