added form adress field

--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -42,6 +42,12 @@
           <input [disabled]="loading" [(ngModel)]="user.city" name="city" matInput>
         </mat-form-field>
       </div>
+      <div class="input-row">
+        <mat-form-field>
+          <mat-label>Mail</mat-label>
+          <input [disabled]="loading" [(ngModel)]="user.email" name="email" matInput>
+        </mat-form-field>
+      </div>
     </div>
 
   </form>
