--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -4,11 +4,15 @@
     right: 48px;
 }
 
+th {
+    color: rgba(0,0,0,0.6)
+}
+
 .user-table-row {
+    border-bottom: 1px solid rgba(0,0,0,0.3);
 
     td {
-        padding-top: 24px;
-
+        padding: 8px 0px;
 
     }
 }
